UI fix (data collapse)

--- a/client/src/app/components/dashboards/free/applicants-db/applicants-db.component.scss
+++ b/client/src/app/components/dashboards/free/applicants-db/applicants-db.component.scss
@@ -10,9 +10,25 @@
   }
 }
 
-.hr-line{
-  width: 100%;
-  height: 1px;
-  background-color: var(--color-secondary-400);
-  margin: 6px 0;
+.applicants-list-row{
+  border-bottom: 1px solid var(--color-secondary-600);
+}
+
+.see-more-btn{
+  cursor: pointer;
+  border: 1px solid var(--color-secondary-600);
+  border-radius: 5px;
+  background-color: var(--color-surface-mixed-200);
+  color: var(--color-text-200);
+  padding: 2px 8px;
+
+  i{
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
+  }
+
+  &:hover{
+    background-color: var(--color-surface-mixed-300);
+  }
 }
